# miraifs

./: .gitignore  README.md  image.html
contracts/old_sources/: blob.move  chunk.move  file_old.move  vec_test.move
contracts/sources/: file.move  typed_id.move  utils.move
contracts/tests/: miraifs_tests.move
gateway/: pyproject.toml  start.sh
gateway/miraifs_gateway/: __init__.py
miraifs-bcs/: README.md  bun.lockb  data.json  index.ts  package.json
miraifs-gateway/miraifs_gateway/: main.py
miraifs-sdk/: pyproject.toml
miraifs-sdk/miraifs_sdk/: __init__.py  cli.py  exceptions.py  file.py  file_chunk.py  miraifs.py  miraifs_.py  models.py  sui.py  txb.py  utils.py
miraifs-sdk/miraifs_sdk/cli/: __init__.py  file.py
miraifs-sdk/miraifs_sdk/miraifs/: __init__.py  file.py  file_chunk.py
package/: Move.toml
package/sources/: base64.move  chunk.move  file.move  utils.move
sdk/: README.md  bun.lockb  index.ts  package.json  pyproject.toml
sdk/python/miraifs-sdk/: .gitignore  pyproject.toml
sdk/python/miraifs-sdk/miraifs_sdk/: __init__.py  miraifs.py  models.py  sui.py  utils.py
sdk/python/miraifs-sdk/miraifs_sdk/cli/: __init__.py  file.py  gas.py
sdk/python/miraifs-sdk/miraifs_sdk/miraifs/: __init__.py
sdk/python/miraifs-sdk/miraifs_sdk/miraifs/txb/: chunk.py  file.py
sdk/src/miraifs_sdk/: __init__.py  sui.py
sdk/src/miraifs_sdk/cli/: file.py
sdk/src/miraifs_sdk/miraifs/txb/: chunk.py
