[tool.poetry]
name = "miraifs-gateway"
version = "0.1.0"
description = ""
authors = ["Brian Li <brian@brianli.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
granian = "^1.4.2"
httpx = "^0.27.0"
uvicorn = "^0.30.1"
zstandard = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
