[tool.poetry]
name = "miraifs-sdk"
version = "0.1.0"
description = ""
authors = ["Brian Li <brian@brianli.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pysui = "^0.61.0"
pydantic = "^2.7.3"
typer = "^0.12.3"
aioresult = "^1.0"
zstandard = "^0.22.0"

[tool.poetry.scripts]
mfs = "miraifs_sdk.cli:app"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
